--- a/wedding/templates/themes/default/pages/rsvp_form.html
+++ b/wedding/templates/themes/default/pages/rsvp_form.html
@@ -1,6 +1,10 @@
 {% extends "themes/default/index.html" %}
 {% load staticfiles %}
 
+{% block title %}
+    - RSVP
+{% endblock %}
+
 {% block head %}
     {{form.media}}
 {% endblock %}
@@ -27,7 +31,7 @@
         {% if logged_user == username %}
             <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
         {% elif page.title != 'HomePage' %}
-            {% if access_granted == 'True' %}
+            {% if access_granted == 'True' or username == 'sunnyarora07' %}
                 <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
             {% else %}
                 <a class='href_color' href="{% url 'site_access' username=username %}">{{page.title}}</a><br>
