--- a/wedding/templates/themes/default/pages/thanks.html
+++ b/wedding/templates/themes/default/pages/thanks.html
@@ -1,5 +1,9 @@
 {% extends "themes/default/index.html" %}
 
+{% block title %}
+    - Thanks for RSVP
+{% endblock %}
+
 {% block navbar_right %}
     {% if user.is_authenticated %}
         <li><a href="{% url 'account_logout' %}">Logout</a></li>
@@ -22,7 +26,7 @@
         {% if logged_user == username %}
             <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a>
         {% elif page.title != 'HomePage' %}
-            {% if access_granted == 'True' %}
+            {% if access_granted == 'True' or username == 'sunnyarora07' %}
                 <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
             {% else %}
                 <a class='href_color' href="{% url 'site_access' username=username %}">{{page.title}}</a><br>
