--- a/wedding/templates/themes/default/photologue/photo_list.html
+++ b/wedding/templates/themes/default/photologue/photo_list.html
@@ -9,7 +9,9 @@
     </style>
 {% endblock %}
 
-{% block title %}Photo Album{% endblock %}
+{% block title %}
+    - Photo Album
+{% endblock %}
 
 
 {% block navbar_right %}
@@ -31,6 +33,40 @@
 {% block heading %}
     {% if logged_user == username %}
         <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+    {% else %}
+        {% if access_granted == 'False' %}
+            <div id="myModal" class="modal fade" data-backdrop="static">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Site Access Form</h4>
+                        </div>
+                        <form method="post" action="">
+                            {% csrf_token %}
+                            <div class="modal-body">
+                                {% if error %}
+                                    <div class="alert alert-danger alert-error">
+                                        <strong>Error!</strong> {{error}}.
+                                    </div>
+                                {% endif %}
+                                <div class="control-group form-group">
+                                    <div class="controls form_control">
+                                        {% for field in form %}
+                                            {{ field.label_tag }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            {{ field }}<br><br>
+                                            (Enter the Access Key shared by the Wedding Couple)<br><br>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     {% endif %}
 {% endblock heading %}
 
@@ -43,14 +79,10 @@
                 <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
             {% endif %}
         {% elif page.title != 'HomePage' %}
-            {% if access_granted == 'True' %}
-                {% if page.title == 'Photo Album' %}
-                    <a class='href_color' href="{% url 'photo_list' username=username %}">{{page.title}}</a><br>
-                {% else %}
-                    <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
-                {% endif %}
+            {% if page.title == 'Photo Album' %}
+                <a class='href_color' href="{% url 'photo_list' username=username %}">{{page.title}}</a><br>
             {% else %}
-                <a class='href_color' href="{% url 'site_access' username=username %}">{{page.title}}</a><br>
+                <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
             {% endif %}
         {% endif %}
     {% endfor %}
