--- a/wedding/templates/themes/default/audio/audio_list.html
+++ b/wedding/templates/themes/default/audio/audio_list.html
@@ -81,7 +81,9 @@
     </script>
 {% endblock %}
 
-{% block title %}Music Album{% endblock %}
+{% block title %}
+    - Music Album
+{% endblock %}
 
 {% block navbar_right %}
     {% if logged_user == username %}
@@ -102,6 +104,40 @@
 {% block heading %}
     {% if logged_user == username %}
         <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+    {% else %}
+        {% if access_granted == 'False' %}
+            <div id="myModal" class="modal fade" data-backdrop="static">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Site Access Form</h4>
+                        </div>
+                        <form method="post" action="">
+                            {% csrf_token %}
+                            <div class="modal-body">
+                                {% if error %}
+                                    <div class="alert alert-danger alert-error">
+                                        <strong>Error!</strong> {{error}}.
+                                    </div>
+                                {% endif %}
+                                <div class="control-group form-group">
+                                    <div class="controls form_control">
+                                        {% for field in form %}
+                                            {{ field.label_tag }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            {{ field }}<br><br>
+                                            (Enter the Access Key shared by the Wedding Couple)<br><br>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     {% endif %}
 {% endblock heading %}
 
@@ -114,14 +150,10 @@
                 <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
             {% endif %}
         {% elif page.title != 'HomePage' %}
-            {% if access_granted == 'True' %}
-                {% if page.title == 'Music Album' %}
-                    <a class='href_color' href="{% url 'audio_list' username=username %}">{{page.title}}</a><br>
-                {% else %}
-                    <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
-                {% endif %}
+            {% if page.title == 'Music Album' %}
+                <a class='href_color' href="{% url 'audio_list' username=username %}">{{page.title}}</a><br>
             {% else %}
-                <a class='href_color' href="{% url 'site_access' username=username %}">{{page.title}}</a><br>
+                <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
             {% endif %}
         {% endif %}
     {% endfor %}
@@ -139,11 +171,11 @@
                 </a>
                 {% if logged_user == username %}
                     <form method="post" action="{% url 'audio_update' username=username pk=audio.pk %}">
-                    {% csrf_token %}
+                        {% csrf_token %}
                         <input type="submit" value="Edit Audio" class="btn btn-primary">
                     </form>
-                    <form method="post" action="{% url 'audio_delete' username=username pk=audio.pk %}">
-                    {% csrf_token %}
+                    <form method="post" action="">
+                        {% csrf_token %}
                         <input type="submit" value="Delete Audio" class="btn btn-primary">
                     </form>
                 {% endif %}
