--- a/wedding/templates/themes/default/index.html
+++ b/wedding/templates/themes/default/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="">
         <link rel="shortcut icon" type="image/png" href="{{MEDIA_URL}}images/default/favicon.ico"/>
 
-        <title>Wedding Bells - {% block title %}{%endblock%}</title>
+        <title>Wedding Bells {% block title %}{%endblock%}</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
@@ -184,7 +184,6 @@
                             <a target='_blank' href="https://facebook.com/sunnyarora29"><i class="fa fa-facebook-square fa-2x"></i></a>
                             <a target='_blank' href="https://www.linkedin.com/pub/sunny-arora/3a/a5/670"><i class="fa fa-linkedin-square fa-2x"></i></a>
                             <a target='_blank' href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-                            <a target='_blank' href="https://github.com/sunnyar/wedding"><i class="fa fa-github-square fa-2x"></i></a>
                     	    <a href="/">Home</a>
                         	<a href="/terms/">Terms</a>
                         	<a href="/privacy/">Privacy</a>
