--- a/wedding/templates/themes/default/pages/address_form.html
+++ b/wedding/templates/themes/default/pages/address_form.html
@@ -1,6 +1,10 @@
 {% extends "themes/default/index.html" %}
 {% load staticfiles %}
 
+{% block title %}
+    - Address Form
+{% endblock %}
+
 {% block head %}
     {{form.media}}
 {% endblock %}
