--- a/wedding/templates/themes/default/pages/address_list.html
+++ b/wedding/templates/themes/default/pages/address_list.html
@@ -2,7 +2,9 @@
 {% load split %}
 {% load easy_maps_tags cache %}
 
-{% block title %}Map of Events{% endblock title %}
+{% block title %}
+    - Map of Events
+{% endblock title %}
 
 {% block navbar_right %}
     {% if logged_user == username %}
@@ -16,8 +18,43 @@
 {% endblock navbar_right %}
 
 {% block heading %}
+
     {% if logged_user == username %}
         <a href="{% url 'profile_form' username=username %}" class="btn btn-primary">Edit</a>
+    {% else %}
+        {% if access_granted == 'False' %}
+            <div id="myModal" class="modal fade" data-backdrop="static">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Site Access Form</h4>
+                        </div>
+                        <form method="post" action="">
+                            {% csrf_token %}
+                            <div class="modal-body">
+                                {% if error %}
+                                    <div class="alert alert-danger alert-error">
+                                        <strong>Error!</strong> {{error}}.
+                                    </div>
+                                {% endif %}
+                                <div class="control-group form-group">
+                                    <div class="controls form_control">
+                                        {% for field in form %}
+                                            {{ field.label_tag }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            {{ field }}<br><br>
+                                            (Enter the Access Key shared by the Wedding Couple)<br><br>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     {% endif %}
 {% endblock heading %}
 
@@ -26,7 +63,7 @@
         {% if logged_user == username %}
             <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
         {% elif page.title != 'HomePage' %}
-            {% if access_granted == 'True' %}
+            {% if access_granted == 'True' or username == 'sunnyarora07' %}
                 <a class='href_color' href="{% url 'page_detail' username=username slug=page.slug %}">{{page.title}}</a><br>
             {% else %}
                 <a class='href_color' href="{% url 'site_access' username=username %}">{{page.title}}</a><br>
